--- a/module/tmpl/default.ejs
+++ b/module/tmpl/default.ejs
@@ -6,7 +6,6 @@ defined('_JEXEC') or die;
 
 $document = JFactory::getDocument();
 <%
-
 for (key in htmlWebpackPlugin.files.css) { %>
 $document->addStyleSheet('<%= htmlWebpackPlugin.files.css[key] %>');
 <%
@@ -26,13 +25,8 @@ if (htmlWebpackPlugin.options.inlineManifestWebpackName) { %>
         window.$user_data = JSON.parse('<?=json_encode($user_data);?>');
         window.$dfm_data = JSON.parse('<?=$params->extract('dfm')->toString();?>');
     </script><%
-
-for (item of htmlWebpackPlugin.options.scripts) { %><%
-if (typeof item === 'string' || item instanceof String) { item = { src: item, type: 'text/javascript' } } %>
-    <script<% for (key in item) { %> <%= key %>="<%= item[key] %>"<% } %>></script><%
-} %><%
-
-for (key in htmlWebpackPlugin.files.chunks) { %>
-    <script src="<%= htmlWebpackPlugin.files.chunks[key].entry %>" type="text/javascript"></script><%
+for (key in htmlWebpackPlugin.files.js) { %>
+    <script src="<%= htmlWebpackPlugin.files.js[key] %>" type="text/javascript"></script><%
 } %>
+    <%= htmlWebpackPlugin.tags.bodyTags %>
 </div>
